Its all about pizza now

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -16,6 +16,10 @@ html
           ul.navbar-nav.mr-auto
             li.nav-item
               a.nav-link(href='/about/') About
+        #navbarMain.navbar-collapse.collapse
+          ul.navbar-nav.mr-auto
+            li.nav-item
+              a.nav-link(href='/pizza/') Pizza
 
     .container.content
       block content
